--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -176,14 +176,15 @@ const { t } = useI18n('es');
         </div>
 
         <div class="tour-button-container">
-          
-            href="https://ut3.cicese.mx/recorrido"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="btn-secondary mono"
-          >
-            Recorrido
-          </a>
+       <a
+  href="https://ut3.cicese.mx/recorrido"
+  target="_blank"
+  rel="noopener noreferrer"
+  class="btn btn-secondary mono"
+>
+  Recorrido
+</a>
+
         </div>
       </div>
 
